Fix security hotspots with patterns